--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@mui/utils": "7.1.1",
     "@mui/x-date-pickers": "8.5.1",
     "@phosphor-icons/react": "2.1.10",
+    "@prisma/client": "^6.13.0",
     "apexcharts": "4.7.0",
+    "bcrypt": "^6.0.0",
     "dayjs": "1.11.13",
     "next": "15.3.3",
     "react": "19.1.0",
@@ -46,6 +48,7 @@
     "@next/eslint-plugin-next": "15.3.3",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.3.0",
+    "@types/bcrypt": "^6.0.0",
     "@types/jest": "29.5.14",
     "@types/node": "24.0.0",
     "@types/react": "19.1.7",
@@ -63,6 +66,7 @@
     "jest": "30.0.0",
     "jest-environment-jsdom": "30.0.0",
     "prettier": "3.5.3",
+    "prisma": "^6.13.0",
     "typescript": "5.8.3",
     "typescript-eslint": "8.34.0"
   }
