--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "apexcharts": "4.7.0",
     "bcrypt": "^6.0.0",
     "dayjs": "1.11.13",
+    "joi": "^18.0.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.3.3",
     "react": "19.1.0",
     "react-apexcharts": "1.7.0",
@@ -50,6 +52,7 @@
     "@testing-library/react": "16.3.0",
     "@types/bcrypt": "^6.0.0",
     "@types/jest": "29.5.14",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "24.0.0",
     "@types/react": "19.1.7",
     "@types/react-dom": "19.1.6",
