--- a/package.json
+++ b/package.json
@@ -17,16 +17,17 @@
   },
   "dependencies": {
     "@emotion/cache": "11.14.0",
-    "@emotion/react": "11.14.0",
+    "@emotion/react": "^11.14.0",
     "@emotion/server": "11.11.0",
-    "@emotion/styled": "11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@fontsource/inter": "5.2.6",
     "@fontsource/plus-jakarta-sans": "5.2.6",
     "@fontsource/roboto-mono": "5.2.6",
     "@hookform/resolvers": "5.1.1",
+    "@mui/icons-material": "^7.3.1",
     "@mui/lab": "7.0.0-beta.13",
-    "@mui/material": "7.1.1",
-    "@mui/system": "7.1.1",
+    "@mui/material": "^7.3.1",
+    "@mui/system": "^7.3.1",
     "@mui/utils": "7.1.1",
     "@mui/x-date-pickers": "8.5.1",
     "@phosphor-icons/react": "2.1.10",
@@ -53,6 +54,7 @@
     "@types/bcrypt": "^6.0.0",
     "@types/jest": "29.5.14",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/lodash": "^4.17.20",
     "@types/node": "24.0.0",
     "@types/react": "19.1.7",
     "@types/react-dom": "19.1.6",
