--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "joi": "^18.0.0",
     "jsonwebtoken": "^9.0.2",
     "next": "15.3.3",
+    "nodemailer": "^7.0.5",
     "react": "19.1.0",
     "react-apexcharts": "1.7.0",
     "react-dom": "19.1.0",
@@ -56,6 +57,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/lodash": "^4.17.20",
     "@types/node": "24.0.0",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "19.1.7",
     "@types/react-dom": "19.1.6",
     "@typescript-eslint/parser": "8.34.0",
